crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__category_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.category_tags::tag::category_tree":
    arg_constraints:
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: depth
        required: false
        kind: Variable
        position: 0
      - name: parent
        required: false
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
