crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__display_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.display_tags::tag::get_parameters":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: except_field
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "src.oscar.templatetags.display_tags::tag::iffeature":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: app_name
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs:
  "src.oscar.templatetags.display_tags::tag::iffeature":
    end_tag: endiffeature
    intermediates: []
    opaque: false
