crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__image_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.image_tags::tag::image":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: image
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
