crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__shipping_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge_discount":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge_excl_discount":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
